# lcsc-scrape.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  JLC_Components.ods  LICENSE-MIT  README.md  bootstrap.sh  build.sh  create_release.sh  lcsc-scrape  prepare_releases.sh  run.sh  rust-toolchain.toml
src/: main.rs
